# svf-front-end

./: .gitignore  CMakeLists.txt  README.md  a.out
include/: ASTBuilder.h  ASTBuilder.tpp  ASTNode.h  BasicBlock.h  CFG.h  ExprAST.h  Ir.h  IrArg.h  IrArrayDeclarator.h  IrBinaryExpr.h  IrDecl.h  IrDeclarator.h  IrExpr.h  IrLiteral.h  IrLocation.h  IrNonBinaryExpr.h  IrPreprocInclude.h  IrStatement.h  IrStorageClassSpecifier.h  IrSubscriptExpr.h  IrTransUnit.h  IrType.h  IrTypeComposite.h  Ll.h  LlBuilder.h  LlBuilderList.h  LlLocationStruct.h  LlSymbolTable.h  NodeAST.h  SymbolTable.h  Type.h  TypeAST.h  main.h  utils.h
include/Ir/: Ir.h  IrArg.h  IrBinaryExpr.h  IrDecl.h  IrDeclarator.h  IrExpr.h  IrForStmt.h  IrLiteral.h  IrNonBinaryExpr.h  IrPreproc.h  IrPreprocInclude.h  IrStatement.h  IrStorageClassSpecifier.h  IrSubscriptExpr.h  IrTransUnit.h  IrType.h  IrTypeComposite.h
src/: ASTBuilder.cpp  Ir.cpp  IrTransUnit.cpp  Ll.cpp  SymbolTable.cpp  main.cpp
src/Ir/: Ir.cpp  IrType.cpp
test/: TestSSA.cpp
tests/parser/legal/: legal-05  legal-06  legal-06.ll  legal-07  legal-07.c  legal-07.ll  legal-08  legal-08.c  legal-08.ll  legal-09
tests/parser/legal-rust/: legal-000.rs  legal-01  legal-01.rs  legal-02  legal-02.rs  legal-04.rs  legal-05  legal-06  legal-06.rs  legal-07  legal-08  legal-09.rs  legal-10.rs  pointer-01
tests/svf-test-suite/: example.c  example.ll  example_new.c  example_new.ll  posterC.c  svf-simple-c.c  while_simple.c  while_simple2.c
tests/svf-test-suite/ae/: BASIC_array_2d_0-0.c  BASIC_array_func_0-0.c  BASIC_array_func_3-0.c  BASIC_array_int_0-0.c  BASIC_array_struct_0-0.c  BASIC_arraycopy1-0.c  BASIC_switch01-0.c
to-copy/: ExprAST.cpp  Ir.h  IrArg.h  IrDecl.h  IrStatement.h  Ll.h  LlBuilder.h  LlSymbolTable.h  ScopeStack.h
